# win-sid

./: Cargo.toml  LICENSE-MIT  README.md  justfile
src/: lib.rs  tests.rs
win-sid-core/: Cargo.toml
win-sid-core/src/: lib.rs  maybe_heap.rs  tests.rs
win-sid-macros/: Cargo.toml
win-sid-macros/src/: lib.rs
