[package]
name = "win-sid"
version = "0.1.0"
edition = "2021"
authors = ["Joe Dillon <joseph@outurnate.com>"]
description = "Windows security identifier primitive"
documentation = "https://docs.rs/win-sid"
readme = "README.md"
homepage = "https://github.com/outurnate/win-sid/"
repository = "https://github.com/outurnate/win-sid/"
license = "MIT OR Apache-2.0"
keywords = ["serialization", "parsing", "utility", "windows", "library"]
rust-version = "1.80.0"

[workspace]
members = ["win-sid-core", "win-sid-macros"]

[dependencies]
win-sid-core = { path = "win-sid-core" }
win-sid-macros = { path = "win-sid-macros" }
