[package]
name = "win-sid-core"
version = "0.1.0"
edition = "2021"
authors = ["Joe Dillon <joseph@outurnate.com>"]
description = "Windows security identifier primitive"
documentation = "https://docs.rs/win-sid-core"
readme = "../README.md"
homepage = "https://github.com/outurnate/win-sid/"
repository = "https://github.com/outurnate/win-sid/"
license = "MIT OR Apache-2.0"
keywords = ["serialization", "parsing", "utility", "windows", "library"]

[features]
serde = ["dep:serde"]

[dependencies]
byteorder = "1.5.0"
nom = "7.1.3"
thiserror = "2.0.2"
serde = { version = "1.0.216", optional = true }