[package]
name = "win-sid-macros"
version = "0.1.0"
edition = "2021"
authors = ["Joe Dillon", "Joe Dillon <joseph@outurnate.com>"]
description = "Windows security identifier primitive"
documentation = "https://docs.rs/win-sid-macros"
readme = "README.md"
homepage = "https://github.com/outurnate/win-sid/"
repository = "https://github.com/outurnate/win-sid/"
license = "MIT OR Apache-2.0"
keywords = ["serialization", "parsing", "utility", "windows", "library"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.37"
syn = "2.0.87"
proc-macro2 = "1.0.92"
proc-macro2-diagnostics = "0.10.1"
win-sid-core = { path = "../win-sid-core" }
