[package]
name = "win-sid-macros"
version = "0.2.1"
edition = "2021"
authors = ["Joe Dillon <joseph@outurnate.com>"]
description = "Windows security identifier primitive"
documentation = "https://docs.rs/win-sid-macros"
readme = "../README.md"
homepage = "https://github.com/outurnate/win-sid/"
repository = "https://github.com/outurnate/win-sid/"
license = "MIT OR Apache-2.0"
keywords = ["serialization", "parsing", "utility", "windows", "library"]

[lib]
proc-macro = true

[dependencies]
quote = "~1.0"
syn = "~2.0"
proc-macro2 = "~1.0"
proc-macro2-diagnostics = "~0.10"
win-sid-core = { version = "~0.2", path = "../win-sid-core" }
